[gd_scene load_steps=15 format=3 uid="uid://cc0ytnsq165td"]

[ext_resource type="Script" uid="uid://blrflx2y4i3o6" path="res://scripts/game/game.gd" id="1_p57ef"]
[ext_resource type="Script" uid="uid://mkmol40clssn" path="res://scripts/game/canvas_rpc.gd" id="2_iywne"]
[ext_resource type="PackedScene" uid="uid://cin65u8s7y6gf" path="res://scenes/game/level_map.tscn" id="4_iywne"]
[ext_resource type="Script" uid="uid://d23f6kkxm0bm2" path="res://scripts/game/label_rpc.gd" id="5_lfrn8"]
[ext_resource type="PackedScene" uid="uid://3c5rfbrwr1y" path="res://scenes/game/kill_feed.tscn" id="6_5i0tg"]
[ext_resource type="Theme" uid="uid://b5mq1k5kdvqx0" path="res://themes/pixel_theme.tres" id="6_p57ef"]
[ext_resource type="Script" uid="uid://fth5brdbw74i" path="res://scripts/game/win_screen.gd" id="7_87uf6"]
[ext_resource type="FontFile" uid="uid://bqjqtb4v1fm28" path="res://fonts/PixelOperator8-Bold.ttf" id="8_2a8rs"]

[sub_resource type="Animation" id="Animation_5i0tg"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash/ColorRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lfrn8"]
resource_name = "flash"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash/ColorRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.00373, -0.0333333, -0.00298572, 2.01909, -0.00692958, 0, -0.0804279, -0.00161768, 0.25, 0),
"times": PackedFloat32Array(-0.0333333, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bdhmt"]
_data = {
&"RESET": SubResource("Animation_5i0tg"),
&"flash": SubResource("Animation_lfrn8")
}

[sub_resource type="Animation" id="Animation_2a8rs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_87uf6"]
resource_name = "flicker"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4j704"]
_data = {
&"RESET": SubResource("Animation_2a8rs"),
&"flicker": SubResource("Animation_87uf6")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_p57ef")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://cnkylbamt2u8d")
spawn_path = NodePath("..")

[node name="LevelMap" parent="." instance=ExtResource("4_iywne")]
unique_name_in_owner = true

[node name="HideTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true
autostart = true

[node name="SeekTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 120.0
one_shot = true

[node name="SeekerWaitingScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("2_iywne")
metadata/_custom_type_script = "uid://mkmol40clssn"

[node name="ColorRect" type="ColorRect" parent="SeekerWaitingScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0664123, 0.344665, 0.25032, 1)

[node name="MarginContainer" type="MarginContainer" parent="SeekerWaitingScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SeekerWaitingScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="HideTimeLabel" type="Label" parent="SeekerWaitingScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_p57ef")
text = "Seeking begins in ..."
horizontal_alignment = 1

[node name="HideTimeLeft" type="Label" parent="SeekerWaitingScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 96
text = "30"
horizontal_alignment = 1
script = ExtResource("5_lfrn8")
metadata/_custom_type_script = "uid://d23f6kkxm0bm2"

[node name="TimeDisplay" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("2_iywne")
metadata/_custom_type_script = "uid://mkmol40clssn"

[node name="PanelContainer" type="PanelContainer" parent="TimeDisplay"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_right = 126.0
offset_bottom = 92.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TimeDisplay/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TimeDisplay/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TimeLabel" type="Label" parent="TimeDisplay/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 16
text = "Hiding time left"
horizontal_alignment = 1
script = ExtResource("5_lfrn8")
metadata/_custom_type_script = "uid://d23f6kkxm0bm2"

[node name="TimeLeft" type="Label" parent="TimeDisplay/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("6_p57ef")
theme_override_font_sizes/font_size = 32
text = "60"
horizontal_alignment = 1
script = ExtResource("5_lfrn8")
metadata/_custom_type_script = "uid://d23f6kkxm0bm2"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bdhmt")
}

[node name="Flash" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="Flash"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="KillFeed" parent="." instance=ExtResource("6_5i0tg")]
unique_name_in_owner = true
layer = 2

[node name="WinScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("7_87uf6")
metadata/_custom_type_script = "uid://mkmol40clssn"

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelRPC" type="Label" parent="WinScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.619821, 0.879135, 0.937231, 1)
theme_override_fonts/font = ExtResource("8_2a8rs")
theme_override_font_sizes/font_size = 100
text = "Hiders Win !!!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="WinScreen"]
libraries = {
&"": SubResource("AnimationLibrary_4j704")
}

[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
[connection signal="timeout" from="SeekTimer" to="." method="_on_seek_timer_timeout"]
